--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "main": "./dist/laravue-lib.umd.cjs",
   "module": "./dist/laravue-lib.js",
   "exports": {
@@ -17,13 +19,21 @@
     "build": "vite build",
     "preview": "vite preview"
   },
- 
-
   "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.438.0",
+    "radix-vue": "^1.9.5",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "^3.4.37"
   },
   "devDependencies": {
+    "@types/node": "^22.5.2",
     "@vitejs/plugin-vue": "^5.1.2",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.43",
+    "tailwindcss": "^3.4.10",
     "vite": "^5.4.1"
   }
 }
